--- a/volt.html
+++ b/volt.html
@@ -1,54 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id="miocontainer">
-        <label for="peso grassi">Volt=</label>
-         <input type="number" name="Voltaggio" id="input1">
-         <label for="peso grassi">V</label>
-        <p></p> 
-         <label for="peso carboidrati">Resistenza 1=</label>
-         <input type="number" name="R1" id="input2">
-         <label for="peso carboidrati">Ohm</label>
-        <p></p>
-         <label for="peso carboidrati">Resistenza 2=</label>
-         <input type="number" name="R2" id="input3">
-         <label for="peso carboidrati">Ohm</label>
-        <p></p>
-         <label for="peso grassi">Resistenza 3=</label>
-         <input type="number" name="R3" id="input4">
-         <label for="peso grassi">Ohm</label>
-        <p></p>
-         <label for="peso grassi">Intensità=</label>
-         <input type="number" name="Intensità" id="input5">
-         <label for="peso grassi">A</label>
-        <p></p>
-         <button id="calcolaButton" onclick="Calcolatore()">Calcola</button>
-         <p id="RTOT"></p>
-         <p id="ddp"></p> 
-         <p id="Vol"></p>
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Informatica</title>
+  </head>
+  <body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+    <nav class="navbar navbar-dark bg-gray">
+      <div class="container my-3 text-center">
+        <h1>Le Basi della informatica</h1>
+        <p class="h6">Come imparare l'informatica in modo semplice e veloce, grazie a questo sito capirai l'informatica di base semplicemente clicando due pulsanti e leggendo anche un po'</p>
+      </div>
+
+      <div class="container my-3 text-center">
+      <div class="card" style="width: 18rem;">
+        <img src="./htmlù.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Html</h5>
+          <p class="card-text">come imparare ad usare facilmente html</p>
+          <a href="#" class="btn btn-primary">visita</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="./css.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">css</h5>
+          <p class="card-text">come imparare ad usare facilmente css</p>
+          <a href="#" class="btn btn-primary">visita</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="./javascript.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">javascript</h5>
+          <p class="card-text">come imparare ad usare facilmente javascript</p>
+          <a href="#" class="btn btn-primary">visita</a>
+        </div>
+      </div>
     </div>
-    <script>
-        function Calcolatore(){
-            let Voltaggio=parseInt(document.getElementById("input1").value);
-            let R1=parseInt(document.getElementById("input2").value);
-            let R2=parseInt(document.getElementById("input3").value);
-            let R3=parseInt(document.getElementById("input4").value);
-            let Intensità=parseInt(document.getElementById("input5").value);
-            let RTot=R1+R2+R3;
-            let V=RTot*Intensità;
-            document.getElementById("RTOT").innerHTML="La resistenza totale è: "+RTot;
-            document.getElementById("ddp").innerHTML="La differenza di potenziale è: "+V;
-            R1=Intensità*R1
-            R2=Intensità*R2
-            R3=Intensità*R3
-            document.getElementById("Vol").innerHTML="La 1° resistenza vale: "+R1+", la 2° resistenza vale: "+R2+", la 1° resistenza vale: "+R3;
-        }
-    </script>
-</body>
+  </body>
 </html>
+
+
